@@ -203,7 +203,7 @@ sheets/ciscocomputer.sheet.in
 sheets/ciscohub.sheet.in
 sheets/ciscomisc.sheet.in
 sheets/cisconetwork.sheet.in
-sheets/ciscorouter.sheet.in
+sheets/ciscotelephony.sheet.in
 sheets/civil.sheet.in
 sheets/jigsaw.sheet.in
 sheets/network.sheet.in
